# r1-object-retrieval

./: CMakeLists.txt  README.md  add_to_path.sh  start_sim.sh
app/: CMakeLists.txt
app/approachObject/: CMakeLists.txt
app/approachObject/conf/: approachObject_R1.ini  approachObject_R1_SIM.ini
app/approachObject/scripts/: approachObject_R1_MDETR.xml  approachObject_R1_MDETR_SIM.xml  approachObject_R1_SIM.xml  approachObject_R1_YOLO.xml  approachObject_R1_YOLO_SIM.xml
app/backupVAD/: CMakeLists.txt
app/backupVAD/scripts/: R1_backupVAD.xml  R1_backupVAD_SIM.xml
app/disappointmentPose/: CMakeLists.txt
app/disappointmentPose/conf/: disappointmentPose.ini  disappointmentPose_SIM.ini
app/disappointmentPose/scripts/: disappointmentPose_R1.xml  disappointmentPose_R1_SIM.xml
app/goAndFindIt/: CMakeLists.txt
app/goAndFindIt/conf/: goAndFindIt_R1.ini  goAndFindIt_R1_SIM.ini  goAndFindIt_R1_erzelli.ini
app/goAndFindIt/scripts/: R1_goAndFindIt_MDETR.xml  R1_goAndFindIt_MDETR_SIM.xml  R1_goAndFindIt_YOLO.xml  R1_goAndFindIt_YOLO_SIM.xml  R1_goAndFindIt_YOLO_erzelli.xml  R1_goAndFindIt_YOLO_noMap.xml  R1_goAndFindIt_andPoint_MDETR.xml  R1_goAndFindIt_andPoint_MDETR_SIM.xml  R1_goAndFindIt_andPoint_YOLO.xml  R1_goAndFindIt_andPoint_YOLO_SIM.xml  goAndFindIt_R1_SIM.xml  set_navigation_position.sh  set_navigation_position_sim.sh
app/goAndPoint/: CMakeLists.txt
app/google/: CMakeLists.txt
app/google/conf/: googleChatBot.ini  googleChatBot_EN.ini  googleChatBot_EN_stateless.ini  googleChatBot_stateless.ini  googleSpeechToText.ini  googleSynthesizer_EN.ini
app/headOrientator/: CMakeLists.txt
app/headOrientator/conf/: headOrientator_R1_SIM.ini
app/lookAround/conf/: lookAround_R1_SIM.ini
app/lookForObject/: CMakeLists.txt
app/lookForObject/conf/: lookForObject_R1.ini  lookForObject_R1_SIM.ini  lookForObject_R1_SIM_fast.ini  lookForObject_R1_SIM_faster.ini  lookForObject_R1_demo.ini  look_and_point_R1.ini  look_and_point_R1_SIM.ini  search_and_point_R1_SIM.ini
app/lookForObject/scripts/: R1_lookForObject_MDETR.xml  R1_lookForObject_MDETR_SIM.xml  R1_lookForObject_YOLO.xml  R1_lookForObject_YOLO_SIM.xml  R1_look_and_point_MDETR.xml  R1_look_and_point_MDETR_SIM.xml  R1_look_and_point_YOLO.xml  R1_look_and_point_YOLO_SIM.xml  R1_search_and_point_MDETR.xml  R1_search_and_point_MDETR_SIM.xml  lookForObject_R1_SIM.xml  search_and_point_R1_SIM.xml
app/look_and_point/: CMakeLists.txt
app/look_and_point/scripts/: R1_look_and_point_MDETR.xml  R1_look_and_point_MDETR_SIM.xml  R1_look_and_point_YOLO.xml  R1_look_and_point_YOLO_SIM.xml
app/micActivation/: CMakeLists.txt
app/micActivation/conf/: joystick_trigger_8bitdo.ini
app/nextHeadOrient/: CMakeLists.txt
app/nextHeadOrient/conf/: nextHeadOrient_R1_SIM.ini
app/nextLocPlanner/: CMakeLists.txt
app/nextLocPlanner/conf/: nextLocPlanner_R1.ini  nextLocPlanner_R1_SIM.ini  nextLocPlanner_R1_SIM_office.ini
app/r1Obr-orchestrator/: CMakeLists.txt
app/r1Obr-orchestrator/conf/: chatBot_nwc_test.ini  r1Obr-orchestrator_R1.ini  r1Obr-orchestrator_R1_SIM.ini  r1Obr-orchestrator_R1_demo.ini  r1Obr-orchestrator_R1_erzelli.ini  r1Obr-orchestrator_R1_noChatBot.ini  r1Obr-orchestrator_R1_noContinuousSearch.ini  r1Obr-orchestrator_R1_noMap.ini  speechSynthesizer_nwc_test.ini  stories_to_read.ini
app/r1Obr-orchestrator/scripts/: R1_Orchestrator_MDETR.xml  R1_Orchestrator_MDETR_SIM.xml  R1_Orchestrator_YOLO.xml  R1_Orchestrator_YOLO_SIM.xml  R1_Orchestrator_YOLO_erzelli.xml  R1_Orchestrator_YOLO_erzelli_noApproach.xml  R1_Orchestrator_YOLO_noMap.xml  R1_Orchestrator_YOLO_noMap_noApproach.xml  R1_Orchestrator_YOLO_noMap_wakeWord.xml  R1_handPointing_orchestrator.xml  sourceLLMDevice.sh
app/sensorNetworkReceiver/: CMakeLists.txt
app/sensorNetworkReceiver/conf/: sensorNetworkReceiver.ini  (+2 more)
app/yarpMdetr/: CMakeLists.txt
app/yarpYolo/: CMakeLists.txt
code/: YarpMdetr.py
interfaces/r1OrchestratorRPC/: CMakeLists.txt  r1OrchestratorRPC.thrift
modules/: CMakeLists.txt
modules/approachObject/: CMakeLists.txt  README.md  approachObject.cpp  approachObject.h  approachObjectExecutor.cpp  approachObjectExecutor.h  approachObjectThread.cpp  approachObjectThread.h  main.cpp
modules/backupVAD/: AudioProcessor.cpp  AudioProcessorCreator.cpp  AudioProcessorCreator.h  CMakeLists.txt  MicrophoneStatusCallback.cpp  MicrophoneStatusCallback.h  README.md
modules/disappointmentPose/: CMakeLists.txt  main.cpp
modules/goAndFindIt/: CMakeLists.txt  README.md  getReadyToNav.cpp  getReadyToNav.h  goAndFindIt.cpp  goAndFindIt.h  goAndFindItThread.cpp  goAndFindItThread.h  main.cpp
modules/goAndPoint/: goAndPoint.cpp  goAndPoint.h  goAndPointThread.cpp
modules/headOrientator/: CMakeLists.txt  README.md  headOrientator.cpp  headOrientator.h  main.cpp
modules/lookAround/: headOrientator.cpp  headOrientator.h
modules/lookForObject/: CMakeLists.txt  README.md  lookForObject.cpp  lookForObject.h  lookForObjectThread.cpp  lookForObjectThread.h  main.cpp  nextHeadOrient.cpp  nextHeadOrient.h  robotOrient.cpp  robotOrient.h
modules/look_and_point/: CMakeLists.txt  README.md  main.cpp
modules/micActivation/: CMakeLists.txt  main.cpp
modules/nextHeadOrient/: CMakeLists.txt  README.md  main.cpp  nextHeadOrient.cpp  nextHeadOrient.h
modules/nextLocPlanner/: CMakeLists.txt  README.md  main.cpp  nextLocPlanner.cpp  nextLocPlanner.h
modules/r1Obr-orchestrator/: CMakeLists.txt  README.md  chatBot.cpp  chatBot.h  continuousSearch.cpp  continuousSearch.h  inputManager.cpp  inputManager.h  input_collector.cpp  input_collector.h  main.cpp  nav2home.cpp  nav2home.h  nav2loc.cpp  nav2loc.h  orchestratorThread.cpp  orchestratorThread.h  r1Obr-orchestrator.cpp  r1Obr-orchestrator.h  r1Obr-orchestratorThread.cpp  r1Obr-orchestratorThread.h  speechSynthesizer.cpp  speechSynthesizer.h  storyTeller.cpp  storyTeller.h  tinyDancer.cpp  tinyDancer.h
modules/sensorNetworkReceiver/: CMakeLists.txt  README.md  main.cpp
modules/yarpMdetr/: README.MD  mdetr_python_code  python_code  yarpMdetr.py
modules/yarpYolo/: README.MD  yarpYolo.py  yoloWebcam.py
(+108 files in other folders)
