# Copyright (C) 2015 iCub Facility - Istituto Italiano di Tecnologia
# Author: Raffaele Colombo
# email:  raffaele.colombo@iit.it

add_subdirectory(nextLocPlanner)
add_subdirectory(yarpMdetr)
add_subdirectory(lookForObject)
add_subdirectory(goAndFindIt)
add_subdirectory(yarpYolo)
add_subdirectory(r1Obr-orchestrator)
add_subdirectory(disappointmentPose)
add_subdirectory(approachObject)
