# Copyright (C) 2015 iCub Facility - Istituto Italiano di Tecnologia
# Author: Raffaele Colombo
# email:  raffaele.colombo@iit.it

add_subdirectory(nextLocPlanner)
add_subdirectory(yarpMdetr)
add_subdirectory(lookForObject)
add_subdirectory(goAndFindIt)
add_subdirectory(yarpYolo)
add_subdirectory(r1Obr-orchestrator)
add_subdirectory(disappointmentPose)
add_subdirectory(approachObject)
add_subdirectory(look_and_point)
add_subdirectory(backupVAD)
add_subdirectory(micActivation)
add_subdirectory(google)
add_subdirectory(sensorNetworkReceiver)